Changelog
---------

In next release

- Added support for ``repoze.xmliter`` which allows reusing an
  ``lxml`` document tree between middlewares. [malthe]

- Media types for stylesheets are now taken into account when merging
  the resources. Squeze uses CSS2 `@media <type>` syntax. [jvloothuis]

0.3 (released 2008-10-08)
~~~~~~~~~~~~~~~~~~~~~~~~~

- Relative URLs appearing in stylesheets are now made absolute before
  merging. [malthe]

0.2 (released 2008-10-03)
~~~~~~~~~~~~~~~~~~~~~~~~~

- Add setuptools as a dependency. [malthe]

0.1 (released 2008-10-02)
~~~~~~~~~~~~~~~~~~~~~~~~~

- Initial release.

